# master-plan-intelligence

./: .env  .env.example  .gitignore
backend/: .env.example  .gitignore  .tmpVAEetc  CPANEL.txt  docker-compose.yml  passenger_wsgi.py  pyproject.toml  requirements.txt  run_migrate.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_postgis.py  002_seed.py  003_master_plan_ai_development_report.py
backend/app/: main.py
backend/app/constants/: __init__.py  messages.py  prompts.py
backend/app/core/: config.py  database.py  dependencies.py  deps.py  exceptions.py  geo.py  geography.py  security.py
backend/app/models/: __init__.py  file.py  function_type.py  master_plan.py  object.py  object_type.py  project.py  user.py
backend/app/routes/: ai.py  auth.py  file.py  function_type.py  master_plan.py  object.py  object_type.py  project.py  user.py
backend/app/schemas/: ai.py  auth.py  file.py  function_type.py  geo.py  geography.py  master_plan.py  object.py  object_type.py  project.py  user.py
backend/app/services/: ai_service.py  auth_service.py  file_service.py  function_type_service.py  master_plan_service.py  object_service.py  object_type_service.py  project_service.py  user_service.py
backend/app/utils/: __init__.py  http_headers.py  prompt_utils.py
backend/scripts/: clean.py  dump_seed.py  dump_seed_from_csv.py  run_migrate.py
backend/seed_data/: 001_object_type.json  002_function_type.json  003_object.json
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  (+1 more)
(+80 files in other folders)
